@@ -2,14 +2,17 @@ package in.techcamp.colorchartconnect.service;
 
 import in.techcamp.colorchartconnect.entity.ProductEntity;
 import in.techcamp.colorchartconnect.form.ProductForm;
+import in.techcamp.colorchartconnect.repository.ProductImageRepository;
 import in.techcamp.colorchartconnect.repository.ProductRepository;
 import lombok.RequiredArgsConstructor;
 import org.dozer.Mapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
+import org.springframework.ui.Model;
+import org.springframework.util.StringUtils;
+import org.springframework.web.multipart.MultipartFile;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -18,7 +21,7 @@ import java.nio.file.Paths;
 
 @Service
 @RequiredArgsConstructor
-public class ProductImageServiceImpl implements ProductImageService {
+public class ProductImageServiceImpl { //implements ProductImageService {
 
   @Autowired
   private final ProductRepository productRepository;
@@ -29,21 +32,41 @@ public class ProductImageServiceImpl implements ProductImageService {
   private String imgFolder;
 
   @Value("${image.extract}")
+
   private String imgExtract;
 
-  @Override
-  public void saveProduct(ProductForm form) throws IOException {
-    if(form != null && form.getProduct_image() != null && !form.getProduct_image().isEmpty()){
-      //保存する画像のパス設定
-      var saveFileName = form.getProduct_id() + imgExtract;
-      File file = new File(imgFolder);
-      Path imageFilePath = Path.of(imgFolder, saveFileName);
+//  @Override
+//  public void saveProduct(ProductForm form) throws IOException {
+//    if(form != null && form.getProduct_image() != null && !form.getProduct_image().isEmpty()){
+//      //保存する画像のパス設定
+////      File file = new File("0");
+//      String fileName = fileName(form.getProduct_image());
+//      var saveFileName = fileName + imgExtract;
+//
+//      Path imageFilePath = Paths.get(imgFolder, saveFileName);
+//
+//      //画像ファイル保存
+//      Files.copy(form.getProduct_image().getInputStream(), imageFilePath);
+//    }
+//    //DB更新
+//    var productInfo = mapper.map(form, ProductForm.class);
+//    productRepository.insert(productInfo);
+//  }
 
-      //画像ファイル保存
-      Files.copy(form.getProduct_image().getInputStream(), imageFilePath);
-    }
-    //DB更新
-    var productInfo = mapper.map(form, ProductForm.class);
-    productRepository.insert(productInfo);
+//  public String fileName(MultipartFile file) throws IOException {
+//    String name = StringUtils.cleanPath(file.getOriginalFilename());
+//    return name;
+//  }
+
+  public ProductForm store(MultipartFile file) throws IOException {
+    String fileName = StringUtils.cleanPath(file.getOriginalFilename());
+    // 画像データの取得
+    byte[] imageData = file.getBytes();
+
+    // 保存するProductEntityの作成
+    ProductForm form = new ProductForm();
+    form.setImage_filename(fileName);
+    form.setImage_data(imageData);
+    return productRepository.insert_image(form.getImage_data() ,form.getImage_filename());
   }
 }
